--- a/final/about.html
+++ b/final/about.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C}</style>
+  <style>body{background-color: #B77729;} h1,h2,h3,h4,h5,h6 {color: #B77729}</style>
 </head>
 <body>
   <div class="container">
