--- a/final/community.html
+++ b/final/community.html
@@ -107,7 +107,9 @@
         </div>
 
         <div class="col s12 m4 l4">
-          <img src="img/communityImage.jpg" />
+          <div class="pageNav">
+            <img src="img/communityImage.jpg" />
+          </div>
         </div>
       </div>
 
