--- a/final/specials.html
+++ b/final/specials.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C}</style>
+  <style>body{background-color: #674736;} h1,h2,h3,h4,h5,h6 {color: #674736}</style>
 </head>
 <body>
   <div class="container">
@@ -63,7 +63,81 @@
 
     <main>
 
-      <!-- Content here -->
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <h1>MONTH AFTER MONTH, RICKER'S DELIVERS THE BIGGEST VALUES.</h1>
+          <p>The temperatures are falling but the savings at your local Ricker’s store are hotter than ever! Look here to find the Ricker’s location closest to your home, office or morning commute. And don’t forget to check back next month for a brand new lineup of in-store savings.</p>
+
+          <div class="row">
+            <div class="col s12 m6 l4">
+              <img src="img/products/01.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/02.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/03.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/04.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/05.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/06.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/07.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/08.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/09.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/10.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/11.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/12.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/13.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/14.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/15.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/16.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/17.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/18.jpg" class="productImg" />
+            </div>
+            <div class="col s12 m6 l4">
+              <img src="img/products/19.jpg" class="productImg" />
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4 l4">
+          <div class="pageNav">
+            <ul>
+              <li><a href="#">Ricker's App</a></li>
+            </ul>
+            <img src="img/savings.jpg" />
+          </div>
+        </div>
+      </div>
 
     </main>
 
