--- a/final/rewards.html
+++ b/final/rewards.html
@@ -62,15 +62,19 @@
         <div class="col s12 m8 l8">
           <div class="row">
             <div class="col s12 m6 l6">
-              <h1>Register your points!</h1>
+              <h1 class="brown-text">Register your points!</h1>
             </div>
             <div class="col s12 m6 l6">
-              <h1>Register for fuel discounts!</h1>
-            </div>
-            <div class="col s12 m12 l12">
-              <h1 class="white-text">Current members account login.</h1>
+              <h1 class="brown-text">Register for fuel discounts!</h1>
             </div>
           </div>
+          <hr />
+          <div class="row">
+            <div class="col s12 m12 l12">
+              <h1 class="white-text"><a href="login.html">Current members account login.</a></h1>
+            </div>
+          </div>
+          <hr />
           <div class="row">
             <div class="col s12 m8 l8">
               <h2>RICKER'S REWARDS JUST GOT BETTER!</h2>
@@ -89,6 +93,7 @@
               </ul>
             </div>
           </div>
+          <hr />
         </div>
         <div class="col s12 m4 l4">
           <img id="ad1" class="ad" alt="ad 1 here" src="img/ad1.jpg" />
