--- a/final/community.html
+++ b/final/community.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #A09958;} h1,h2,h3,h4,h5,h6 {color: #A09958}</style>
+  <style>body{background-color: #A09958;} h1,h2,h3,h4,h5,h6 {color: #A09958} .pageNav {background-color: #A09958}</style>
 </head>
 <body>
   <div class="container">
@@ -11,7 +11,7 @@
         <img id="logo" src="img/logo2015.png" />
       </div>
 
-      <nav>
+      <nav role="navigation">
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -107,9 +107,7 @@
         </div>
 
         <div class="col s12 m4 l4">
-          <div class="pageNav">
-            <img src="img/communityImage.jpg" />
-          </div>
+          <img src="img/communityImage.jpg" />
         </div>
       </div>
 
