--- a/final/company.html
+++ b/final/company.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #B77729;} h1,h2,h3,h4,h5,h6 {color: #B77729}</style>
+  <style>body{background-color: #B77729;} h1,h2,h3,h4,h5,h6 {color: #B77729} .pageNav {background-color: #B77729}</style>
 </head>
 <body>
   <div class="container">
@@ -11,7 +11,7 @@
         <img id="logo" src="img/logo2015.png" />
       </div>
 
-      <nav>
+      <nav role="navigation">
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -57,13 +57,52 @@
       </div>
     </header>
 
-
-
-
-
     <main>
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <div class="row">
+            <h1>RICKER'S IS LOCALLY OWNED, LOCALLY OPERATED AND SECOND TO NONE!</h1>
+            <p>Since its founding in 1979, Ricker Oil Company has been providing high quality fuels, clean convenience stores, and marketing/supply services to companies and consumers throughout the state of Indiana. A strong commitment to our community, a sense of pride to our customers, and a long history of corporate trust is the foundation on which our company is built. It's how we do business… now and into the future.</p>
+          </div>
 
-      <!-- Content here -->
+          <div class="row">
+            <h3>Ricker's History</h3>
+            <hr />
+            <p>
+              Name: Ricker Oil Company <br>
+              Founded: 1979 <br>
+              Founded By: Jay &amp; Nancy Ricker <br>
+              Headquarters: Anderson, Indiana <br>
+              Employees: 850 <br>
+              Convenience Stores: 56 <br>
+            </p>
+          </div>
+
+          <div class="row">
+            <hr />
+            <p>Jay &amp; Nancy Ricker founded Ricker Oil Company, Inc. in 1979 in Middletown, Indiana. Jay drove a tank wagon and Nancy managed the books out of their home. Jay had previously worked for Shell Oil Company for seven years.</p>
+            <p>The first convenience store was purchased in 1989 in Middletown, Indiana. As the company grew and expanded, the headquarters relocated to Anderson, Indiana. After moving into the new corporate office location in 2003, the company remodeled the office into a laundromat and in the spring of 2004, Ricker's City Laundry opened.</p>
+          </div>
+
+          <div class="row">
+            <h3>Ricker's Today</h3>
+            <p>Ricker Oil Company has grown through new builds and two major acquisitions – the BP Ft. Wayne market (October 2000) and the Indianapolis BP/ampm market (October 2008). The company has also purchased five oil companies since 1979. Today, the company owns and operates 50 convenience stores.</p>
+            <p>Ricker's is well-known in the central Indiana region for its "Ricker Pop" fountain sales, clean stores, and friendly environment and staff.</p>
+          </div>
+
+        </div>
+        <div class="col s12 m4 l4">
+          <div class="pageNav">
+            <ul>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="#">Newsroom</a></li>
+              <li><a href="#">Fuel Supply</a></li>
+              <li><a href="#">Fleet Card</a></li>
+            </ul>
+          </div>
+          <img src="img/company.jpg" />
+        </div>
+      </div>
 
     </main>
 
@@ -165,7 +204,7 @@
             <a href="#">Featured Publications</a>
           </li>
           <li>
-            <a href="#">Corporate Logos &amp; Photos</a>
+            <a href="#">Corporate Logos  &amp;  Photos</a>
           </li>
           <li>
             <a href="#">Fuel Supply</a>
