--- a/final/faq.html
+++ b/final/faq.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C}</style>
+  <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C} .pageNav {background-color: #93272C}</style>
 </head>
 <body>
   <div class="container">
@@ -63,7 +63,57 @@
 
     <main>
 
-      <!-- Content here -->
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <div class="row">
+            <h1>FREQUENTLY ASKED QUESTIONS</h1>
+            <section>
+              <p><b>What is Ricker’s Rewards?</b><br>
+              It’s a customer loyalty program that provides many great ways to save on in-store purchases and fuel at Ricker’s Convenience Stores. With the Rewards Points & Club programs, points are earned on nearly all items in store as well as fuel at the pump. Earned points accumulate and then can be redeemed and spent just like cash. With Ricker’s Fuel Club, customers can save up to 10¢ a gallon every time they fill up.</p>
+            </section>
+
+            <section>
+              <p><b>Is the Ricker’s Rewards card free?</b><br>
+              Yes! No fees at all. Never. Ever.</p>
+            </section>
+
+            <section>
+              <p><b>How soon after I’ve signed up can I start earning points?</b><br>
+              You start earning points as soon as you pick up your Ricker’s Rewards Card and make a purchase. It’s that easy!</p>
+            </section>
+
+            <section>
+              <p><b>What are the requirements for enrolling in the Ricker’s Rewards program?</b><br>
+              Provide us with complete and accurate enrollment information and enjoy being rewarded as a valued customer.</p>
+            </section>
+
+            <section>
+              <p><b>How do I redeem my points?</b><br>
+                Redeeming your points at Ricker’s is easy. Simply present your enrolled card at any participating location and spend earned points just like cash on qualifying in-store items and fuel. Points are not awarded for lotto and instant lottery, cigarettes, alcohol and pre-paid cards. Points are not redeemable for cash.</p>
+            </section>
+
+            <section>
+              <p><b>How do I check my points?</b><br>
+              Check you point balance as often as you like at www.RickersRewards.com.</p>
+            </section>
+
+            <section>
+              <p><b>What happens if I lose my card?</b><br>
+              If your card is enrolled, simply get another card from a participating location and call the phone number on the back of your card. The points from your original card will automatically be transferred to the new card.</p>
+            </section>
+          </div>
+        </div>
+
+        <div class="col s12 m4 l4">
+          <div class="pageNav">
+            <ul>
+              <li>FAQ >></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="terms.html">Terms of Use</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
     </main>
 
