--- a/final/terms.html
+++ b/final/terms.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C}</style>
+  <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C} .pageNav {background-color: #93272C}</style>
 </head>
 <body>
   <div class="container">
@@ -11,7 +11,7 @@
         <img id="logo" src="img/logo2015.png" />
       </div>
 
-      <nav>
+      <nav role="navigation">
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -57,19 +57,107 @@
       </div>
     </header>
 
-
-
-
-
     <main>
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <div class="row">
+            <div class="col s12">
+              <div class="row">
+                <h1>TERMS OF USE</h1>
+              </div>
 
-      <!-- Content here -->
+              <div class="row">
+                <p>Welcome to the Ricker's Rewards Points &amp; Club Program, owned and operated by KickBack Points LLC ("KickBack" or "KickBack Rewards Program"). The KickBack Points program terms and conditions form the agreement (the "Agreement") between you ("You") and KickBack and its Participating KickBack Locations. This Agreement includes any use you make of the KickBack Points website. PLEASE READ THESE TERMS CAREFULLY AS YOUR USE OF THE KICKBACK REWARDS PROGRAM AND ITS ASSOCIATED WEBSITE CONSITUTES ACCEPTANCE OF THESE TERMS AND CONDITIONS, AS THEY MAY BE AMENDED FROM TIME TO TIME.</p>
+                <p>All benefits that are offered in the Ricker's Rewards Points &amp; Club Program are conditioned upon your compliance with these Membership Rules and Conditions. Similarly, the terms of the Revised Privacy Policy are part of these Rules. These Rules are subject to change at any time. Unless otherwise stated, the current Rules in effect at the time of you earn rewards, request for a benefit, or other transaction will govern that transaction.</p>
+              </div>
 
+              <div class="row">
+                <section>
+                  <p><b>(1)  Agreement to Terms.</b> YOU AGREE TO READ THESE TERMS AND CONDITIONS CAREFULLY BEFORE USING THE Ricker's Rewards Points &amp; Club Program. If you do not agree to these terms and conditions, you may not participate in the Ricker's Rewards Points &amp; Club program. Use of the Ricker's Rewards Points &amp; Club Program signifies your agreement to the terms and conditions of use set forth below.</p>
+                </section>
+
+                <section>
+                  <p><b>(2)  Modification of Agreement.</b> KickBack reserves the right, at its sole discretion, to change, modify, add or remove any portion of this Agreement, in whole or in part, at any time. Notification of changes in the Agreement will be posted on <a href="http://www.kickbackpoints.com">www.kickbackpoints.com</a> or at Participating Ricker's locations. Use of the Ricker's Rewards program after such notice will be considered your agreement to be bound by any such changes. Please check back frequently for program updates or rule changes.</p>
+                </section>
+
+                <section>
+                  <p><b>(3)  Copyright Protection and Use of Company Information.</b> The Ricker's Rewards Points &amp; Club Program operated by KickBack is protected by copyright as a collective work and/or compilation, pursuant to U.S. copyright laws, international conventions and other copyright laws. Company names, logos and trademarks may not be used by you in any manner without the prior written consent of Company. You should assume, unless specifically noted, that everything you see on the Ricker's / KickBack website, and any files or programming related to the website and the Ricker's Rewards Points &amp; Club Program, are protected by such rights owned exclusively by KickBack. You may not recopy, distribute, publicly display, modify, transmit, reuse, repost, or use for public or commercial purposes, any of the contents of the website without the express written permission of KickBack, obtained in advance of such use. Permission requests should be sent to: <a href="mailto:marketing@kickbackpoints.com">marketing@kickbackpoints.com</a>.</p>
+                </section>
+
+                <section>
+                  <p><b>(4)  Minimum Age Requirement.</b> Anyone may participate in Ricker's Rewards Points &amp; Club Program, but you must be at least 18 years old or older to participate in any contest or promotions.</p>
+                </section>
+
+                <section>
+                  <p><b>(5)  Company's Rights in Ricker's Rewards Points &amp; Club Program.</b> Ricker's / KickBack and participating Ricker's Locations, may change, suspend or discontinue any aspect of the Ricker's Rewards Points &amp; Club program at any time, including but not limited to rewards and point accrual/redemption methods. KickBack may also impose limits on certain features and services or restrict your access to parts or all of the Ricker's Rewards Points &amp; Club program or the Website without notice or liability. KickBack reserves the right, in its sole discretion, to refuse service, cancel membership, suspend or terminate an account.</p>
+                </section>
+
+                <section>
+                  <p><b>(6)  Indemnification for Your Breach of Agreement.</b> You hereby agree to indemnify, defend and hold KickBack, and all its officers, directors, owners, agents, employees, information providers, licensors and licensees (collectively, the “Indemnified Parties”), and participating locations harmless from and against any and all liabilities and costs incurred by the Indemnified Parties in connection with any claim arising out of any breach by You of the Agreement or the foregoing representations, warranties and covenants, including, without limitation, attorneys fees and costs. You shall cooperate as fully as reasonably required in the defense of any claim. KickBack reserves the right, at its own expense, to assume the exclusive defense and control of any matter otherwise subject to indemnification by You and You shall not in any event settle any matter without the written consent of Company.</p>
+                </section>
+
+                <section>
+                  <p><b>(7)  Account Deletion and Point Expiration &mdash;</b> Under the KickBack Points Expiration policy, points do not expire. KickBack reserves the right to de-activate or close an account under the following circumstances:</p>
+                  <ul>
+                    <li>Fraudulent activity occurs</li>
+                    <li>A member requests an account closure</li>
+                    <li>A member is deceased</li>
+                    <li>A member does not respond to repeated communication attempts regarding the status of his/her account</li>
+                  </ul>
+                </section>
+                <section>
+                  <p><b>(8)  Audit &mdash;</b> KickBack reserves the right to audit members' accounts at any time and without notice to ensure compliance with the Ricker's Rewards Points &amp; Club program rules and all other applicable Participating Ricker's Location rules and regulations.</p>
+                  <p>In the event the audit reveals discrepancies or violations, KickBack may delay the processing of Points Issuance, Points redemptions, and withhold statements until the discrepancies or violations are resolved. During an investigation, KickBack may inhibit the Ricker's Rewards Points account of a member. While the account is inhibited, the member may continue to accrue points in the account, but no points redemptions will be permitted. Ricker's Rewards membership card must be surrendered to Ricker's / KickBack or any Participating Ricker's Location upon request.</p>
+                </section>
+                <section>
+                  <p><b>(9)  Conditions of Enrollment &mdash;</b> The Ricker's Rewards Points &amp; Club program is open to any person in any country that is not prohibited from participation in rewards programs. Corporations and/or entities can be enrolled as members but any Participating Ricker's Location may opt not to issue rewards.</p>
+                  <p>Members must provide fully verifiable name, email, date of birth and phone number to redeem points in the Ricker's Rewards Points &amp; Club program. Full name means the given name, middle initial or middle name, if any, and family or surname. The full name must be the same as the name on your driver's license, State issued I.D., passport or other valid document (i.e. Visa, Resident Alien Card, etc.), unless you receive your mail at a different address.</p>
+                  <p>Only one person may be enrolled per Rewards Points &amp; Club Program account unless accounts are officially linked by KickBack customer support. Linked accounts have only one back of value common to all such linked cards. Only authorized account holders can request the linking of accounts. Accounts may be linked so that multiple cards can earn rewards (known as child card(s)) but only one card (known as the parent card) can earn AND redeem rewards. Alternatively accounts may be linked so that multiple cards can earn and redeem from the same rewards balance (known as marrying accounts).</p>
+                </section>
+                <section>
+                  <p><b>(10)   KickBack Points Personal Identification Number (PIN)</b></p>
+                  <p>With your Ricker's Rewards Points number and PIN you have access to your Points information 24 hours a day, 7 days a week. Without a PIN, certain transactions may only be done via mail or in person with your Ricker's Rewards card and valid identification. Establishment of a PIN indicates your acceptance of the terms and conditions set forth in this Membership Guide governing your PIN. A PIN allows you access to a variety of self-service tools and Ricker's Rewards Points account information on <a href="http://rickersrewards.com">www.RickersRewards.com</a> and via KickBack customer service, as well as the ability to complete transactions over the phone that could previously be handled only in writing.</p>
+                  <p>Your PIN cannot be viewed or changed by a Participating Ricker's Location representative. If you have forgotten or would like to change your PIN number, call (888) 339-7064*.­</p>
+                  <p>You are responsible for the selection and use of your PIN and for maintaining the confidentiality of your PIN. You may not divulge your PIN to anyone. If you do, you are solely responsible for any actions that person takes with your PIN, including, without limitation any transactions in your account, any violations of the Ricker's Rewards Points &amp; Club program rules, and any further disclosure of your PIN. KickBack shall have no liability for losses resulting from unauthorized access to, or use of, your PIN.</p>
+                </section>
+                <section>
+                  <p><b>(11)   Customer Name and Address Notification &mdash;</b> Each member shall be responsible for advising KickBack of any change of name, email, telephone number or postal address on their account.</p>
+                  <p>Name Changes &mdash; The member's signature and Ricker's Rewards Points &amp; Club Program membership number must be included in all written correspondence. Name change requests cannot be processed over the phone. A copy of supporting legal documentation (e.g., court order) must be submitted by fax/mail and will be required for any name change requests.</p>
+                  <p>
+                    Fax: (208) 735-2195<br >
+                    Phone: (888) 339-7064<br >
+                    Mail:<br>
+                    KickBack Rewards Systems <br>
+                    Customer Support Dept. <br>
+                    308 Shoshone St. E. <br>
+                    Twin Falls, ID 83301 <br>
+                  </p>
+                  <p>Address Change &mdash; KickBack reserves the right to update the address for any member's Ricker's Rewards Points &amp; Club Program account using the National Change of Address (NCOA) data filed by relocating postal customers, but shall have no obligation to do so. Using their Ricker's Rewards Personal Identification Number (PIN), members may update their account address information by visiting <a href="https://www.kickbackpoints.com/myprofile">www.kickbackpoints.com/myprofile</a>. You can also update your account address by submitting the information via fax, mail, or by phone using your PIN.</p>
+                </section>
+                <section>
+                  <p><b>(12)   Your Use of Website &mdash;</b> Your access to and use of the Ricker's Rewards / KickBack Points website, including your account information, are at your risk. Under no circumstances, including but not limited to negligence, shall Ricker's / KickBack, its officers directors, owners, employees, agents, and any other party involved in creating, producing, or delivering the website and any content on the website be liable for any damages whatsoever (including, without limitation, any direct, incidental, consequential, indirct, or punitive damages) arising out of or related to your access to, use of, inability to access or use the website for any reason (e.g., failure of performance or operation, any interruption of service, computer virus), any unauthorized use or access to your account, or any damages to your equipment, programs, files or other property, even if KickBack has been advised of the possibility of such damages.</p>
+                  <p>Occasionally, KickBack provides an external link from its Homepage to a third-party affiliated with the KickBack Rewards Program. KickBack is not responsible for the contents of any on-site or off-site pages referenced through such links, nor is KickBack liable for any defamatory, offensive, or illegal conduct that may occur from or through such third-party link. Links to other websites do not necessarily constitute an endorsement of that site by KickBack.</p>
+                  <p>Although the data found on the KickBack website, including your account information, have been produced and maintained in a manner we believe to be accurate and reliable, KickBack makes no warranty, either express or implied, regarding the accuracy, adequacy, completeness, legality, reliability, or usefulness or any information you may access on the website. KickBack provides this information on an “as is” basis and KickBack, its officers, directors, owners, employees, and agents assume no liability or responsibility for any errors or omissions in the content of the website. If you find any errors or omissions in your account information, you should report them to KickBack by calling (888) 339-7064.</p>
+                </section>
+                <section>
+                  <p><b>(13)  Choice of Law &mdash;</b> Construction of this Agreement is governed by the laws of the State of Idaho. The laws and regulations of the State of Idaho shall apply to all uses of the KickBack Program and the data found or contained on the associated website  Your use of the Program and the website means you must conform to all such laws and regulations.</p>
+                </section>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4 l4">
+          <div class="pageNav">
+            <ul>
+              <li><a href="faq.html">FAQ</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li>Terms of Use >></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </main>
-
-
-
-
 
     <footer>
       <ul>
