--- a/final/careers.html
+++ b/final/careers.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #4E769C;} h1,h2,h3,h4,h5,h6 {color: #4E769C}</style>
+  <style>body{background-color: #4E769C;} h1,h2,h3,h4,h5,h6 {color: #4E769C} .pageNav {background-color: #4E769C}</style>
 </head>
 <body>
 
@@ -12,7 +12,7 @@
         <img id="logo" src="img/logo2015.png" />
       </div>
 
-      <nav>
+      <nav role="navigation">
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -104,8 +104,15 @@
 
         <div class="col s12 m4 l4">
           <div class="pageNav">
-            <img src="img/weWantYou.jpg" />
+            <ul>
+              <li><a href="#">Career Opportunities</a></li>
+              <li><a href="#">Wages</a></li>
+              <li><a href="#">Benefits</a></li>
+              <li><a href="#">Training</a></li>
+              <li><a href="#">How to Apply</a></li>
+            </ul>
           </div>
+          <img src="img/weWantYou.jpg" />
         </div>
 
       </div>
