--- a/final/locations.html
+++ b/final/locations.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #CF4520;} h1,h2,h3,h4,h5,h6 {color: #CF4520}</style>
+  <style>body{background-color: #CF4520;} h1,h2,h3,h4,h5,h6 {color: #CF4520} .pageNav {background-color: #CF4520}</style>
 </head>
 <body>
   <div class="container">
@@ -11,7 +11,7 @@
         <img id="logo" src="img/logo2015.png" />
       </div>
 
-      <nav>
+      <nav role="navigation">
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
