--- a/final/specials.html
+++ b/final/specials.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
-  <style>body{background-color: #674736;} h1,h2,h3,h4,h5,h6 {color: #674736}</style>
+  <style>body{background-color: #674736;} h1,h2,h3,h4,h5,h6 {color: #674736} .pageNav {background-color: #674736;}</style>
 </head>
 <body>
   <div class="container">
@@ -11,7 +11,7 @@
         <img id="logo" src="img/logo2015.png" />
       </div>
 
-      <nav>
+      <nav role="navigation">
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col s12 m8 l8">
           <h1>MONTH AFTER MONTH, RICKER'S DELIVERS THE BIGGEST VALUES.</h1>
-          <p>The temperatures are falling but the savings at your local Ricker’s store are hotter than ever! Look here to find the Ricker’s location closest to your home, office or morning commute. And don’t forget to check back next month for a brand new lineup of in-store savings.</p>
+          <p>The temperatures are falling but the savings at your local Ricker's store are hotter than ever! Look here to find the Ricker's location closest to your home, office or morning commute. And don’t forget to check back next month for a brand new lineup of in-store savings.</p>
 
           <div class="row">
             <div class="col s12 m6 l4">
@@ -134,8 +134,8 @@
             <ul>
               <li><a href="#">Ricker's App</a></li>
             </ul>
-            <img src="img/savings.jpg" />
           </div>
+          <img src="img/savings.jpg" />
         </div>
       </div>
 
