--- a/final/careers.html
+++ b/final/careers.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Careers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
   <style>body{background-color: #4E769C;} h1,h2,h3,h4,h5,h6 {color: #4E769C} .pageNav {background-color: #4E769C}</style>
