--- a/final/community.html
+++ b/final/community.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Community</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
   <style>body{background-color: #A09958;} h1,h2,h3,h4,h5,h6 {color: #A09958} .pageNav {background-color: #A09958}</style>
