--- a/final/contact.html
+++ b/final/contact.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
   <style>body{background-color: #B77729;} h1,h2,h3,h4,h5,h6 {color: #B77729} .pageNav {background-color: #B77729}</style>
