--- a/final/locations.html
+++ b/final/locations.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Locations</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
   <style>body{background-color: #CF4520;} h1,h2,h3,h4,h5,h6 {color: #CF4520} .pageNav {background-color: #CF4520}</style>
