--- a/final/login.html
+++ b/final/login.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
   <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C} .pageNav {background-color: #93272C}</style>
