--- a/final/specials.html
+++ b/final/specials.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Specials</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
   <style>body{background-color: #674736;} h1,h2,h3,h4,h5,h6 {color: #674736} .pageNav {background-color: #674736;}</style>
