--- a/final/careers.html
+++ b/final/careers.html
@@ -69,10 +69,10 @@
           <hr />
 
           <h3 class="white-text">Apply Online Now</h4>
-          <p>Click Here</p>
+          <p><a href="https://secure.jobappnetwork.com/apply/c_roc/l_en/#s">Click Here</a></p>
 
           <h3 class="white-text">Apply by Phone Now</h4>
-          <p>(844) 288-6459</p>
+          <p class="white-text">(844) 288-6459</p>
 
           <hr />
 
