--- a/final/careers.html
+++ b/final/careers.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header>
       <div>
-        <img id="logo" src="img/logo2015.png" />
+        <a href="rewards.html"><img id="logo" src="img/logo2015.png" /></a>
       </div>
 
       <nav role="navigation">
