--- a/final/company.html
+++ b/final/company.html
@@ -180,7 +180,7 @@
             <a href="specials.html">Specials</a>
           </li>
           <li>
-            <a href="#">Ricker's App</a>
+            <a href="rickers-apps.html">Ricker's App</a>
           </li>
         </ul></li>
         <li><ul>
@@ -205,7 +205,7 @@
             <a href="#">Featured Publications</a>
           </li>
           <li>
-            <a href="#">Corporate Logos  &amp;  Photos</a>
+            <a href="#">Corporate Logos &amp; Photos</a>
           </li>
           <li>
             <a href="#">Fuel Supply</a>
