--- a/final/faq.html
+++ b/final/faq.html
@@ -191,7 +191,7 @@
             <a href="specials.html">Specials</a>
           </li>
           <li>
-            <a href="#">Ricker's App</a>
+            <a href="rickers-apps.html">Ricker's App</a>
           </li>
         </ul></li>
         <li><ul>
