--- a/final/login.html
+++ b/final/login.html
@@ -58,19 +58,39 @@
       </div>
     </header>
 
-
-
-
-
     <main>
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <div class="row">
+            <h1>LOG INTO YOUR ACCOUNT SO WE KNOW WHO YOU ARE.</h1>
+            <p>Enter your personal information below and we'll give you (and only you) access to your account!</p>
+          </div>
 
-      <!-- Content here -->
+          <div class="row">
+            <form>
+              <input type="text" placeholder="Card Number *" required/> <br>
+              <input type="text" placeholder="PIN *" required/> <br>
+              <input type="text" placeholder="Email" /> <br>
+              <input type="text" placeholder="Cell Phone" /> <br>
+              <input type="checkbox" id="remember" />
+              <label for="remember">Remember Me</label> <br><br>
 
+              <p>By providing your email and/or cell phone number, you may receive special promotional offers, valuable coupons or surveys from Ricker’s electronically via email or text message, but Ricker’s will not sell ANY of your personal information to ANY third party. Standard data fees and text messaging rates may apply based on your service plan from you mobile carrier.</p>
+              <hr>
+
+              <button type="submit">Login</button>
+            </form>
+          </div>
+
+        </div>
+        <div class="col s12 m4 l4">
+          <a href="faq.html">
+            <img src="img/cardNum.jpg" />
+            <img src="img/learn.jpg" />
+          </a>
+        </div>
+      </div>
     </main>
-
-
-
-
 
     <footer>
       <ul>
