--- a/final/locations.html
+++ b/final/locations.html
@@ -57,11 +57,6 @@
         </ul>
       </div>
     </header>
-
-
-
-
-
     <main>
       <div class="row">
         <div class="col s12 m8 l8">
@@ -75,16 +70,7 @@
           <h3>< map here ></h3>
         </div>
       </div>
-
-
-
-
-
     </main>
-
-
-
-
 
     <footer>
       <ul>
@@ -155,7 +141,7 @@
             <a href="specials.html">Specials</a>
           </li>
           <li>
-            <a href="#">Ricker's App</a>
+            <a href="rickers-apps.html">Ricker's App</a>
           </li>
         </ul></li>
         <li><ul>
