--- a/final/specials.html
+++ b/final/specials.html
@@ -58,12 +58,7 @@
       </div>
     </header>
 
-
-
-
-
     <main>
-
       <div class="row">
         <div class="col s12 m8 l8">
           <h1>MONTH AFTER MONTH, RICKER'S DELIVERS THE BIGGEST VALUES.</h1>
@@ -139,12 +134,7 @@
           <img src="img/savings.jpg" />
         </div>
       </div>
-
     </main>
-
-
-
-
 
     <footer>
       <ul>
@@ -215,7 +205,7 @@
             <a href="specials.html">Specials</a>
           </li>
           <li>
-            <a href="#">Ricker's App</a>
+            <a href="rickers-apps.html">Ricker's App</a>
           </li>
         </ul></li>
         <li><ul>
