--- a/final/template.html
+++ b/final/template.html
@@ -140,7 +140,7 @@
             <a href="specials.html">Specials</a>
           </li>
           <li>
-            <a href="#">Ricker's App</a>
+            <a href="rickers-apps.html">Ricker's App</a>
           </li>
         </ul></li>
         <li><ul>
