--- a/final/careers.html
+++ b/final/careers.html
@@ -36,6 +36,7 @@
         </ul>
       </nav>
       <div id="mobile-nav">
+        <div id="lineBox"><hr/><hr/><hr/></div>
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
