--- a/final/login.html
+++ b/final/login.html
@@ -35,6 +35,7 @@
         </ul>
       </nav>
       <div id="mobile-nav">
+        <div id="lineBox"><hr/><hr/><hr/></div>
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -161,7 +162,7 @@
             <a href="specials.html">Specials</a>
           </li>
           <li>
-            <a href="#">Ricker's App</a>
+            <a href="rickers-apps.html">Ricker's App</a>
           </li>
         </ul></li>
         <li><ul>
