--- a/final/contact.html
+++ b/final/contact.html
@@ -35,6 +35,7 @@
         </ul>
       </nav>
       <div id="mobile-nav">
+        <div id="lineBox"><hr/><hr/><hr/></div>
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -58,19 +59,66 @@
       </div>
     </header>
 
-
-
-
-
     <main>
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <div class="row">
+            <h1>CONTACT US</h1>
+            <h3>Corporate Office</h3>
+            <p>Ricker Oil Company <br>
+            30 W. 11th Street <br>
+            Anderson, Indiana 46016</p>
 
-      <!-- Content here -->
+            <h3>Mailing Address</h3>
+            <p>Ricker Oil Company <br>
+            PO Box 150 <br>
+            Anderson, Indiana 46016-0150</p>
+
+            <h3>Telephone Numbers</h3>
+            <p>Phone: (765) 643-3016 <br>
+            FAX: (765) 642-7323 <br>
+            Email: <a href="mailto:info@rickers.net">info@rickers.net</a></p>
+
+            <h3>Donations</h3>
+            <p>We strongly believe in supporting our communities. To find out how to submit a donation request for community projects, please read our <a href="#">Donation Guidelines.</a></p>
+
+            <h3>Questions?</h3>
+            <p><b>We would like to hear from you!</b> We are always looking for ways to make our services even better. Comments and suggestions are an important part of that process.</p>
+          </div>
+
+          <div class="row">
+            <form>
+              <label for="name">Your Name (required)</label> <br>
+              <input type="text" required id="name" /> <br>
+
+              <label for="email">Your Email (required)</label> <br>
+              <input type="text" required id="email" /> <br>
+
+              <label for="sbj">Subject</label> <br>
+              <input type="text" id="sbj" /> <br>
+
+              <label for="msg">Your message</label> <br>
+              <textarea id="msg"></textarea> <br> <br>
+
+              <button type="submit">Send</button>
+
+            </form>
+          </div>
+        </div>
+        <div class="col s12 m4 l4">
+          <div class="pageNav">
+            <ul>
+              <li>Contact Us >></li>
+              <li><a href="#">Newsroom</a></li>
+              <li><a href="#">Fuel Supply</a></li>
+              <li><a href="#">Fleet Card</a></li>
+            </ul>
+          </div>
+          <img src="img/company.jpg" />
+        </div>
+      </div>
 
     </main>
-
-
-
-
 
     <footer>
       <ul>
