--- a/final/locations.html
+++ b/final/locations.html
@@ -35,6 +35,7 @@
         </ul>
       </nav>
       <div id="mobile-nav">
+        <div id="lineBox"><hr/><hr/><hr/></div>
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
