--- a/final/rickers-apps.html
+++ b/final/rickers-apps.html
@@ -35,6 +35,7 @@
         </ul>
       </nav>
       <div id="mobile-nav">
+        <div id="lineBox"><hr/><hr/><hr/></div>
         <ul>
           <li>
             <a href="rewards.html">Rewards</a>
@@ -64,7 +65,7 @@
         <div class="col s12 m8 l8">
           <div class="row">
             <h1>DOWNLOAD TODAY!</h1>
-            <p>With more saving opportunities and enhanced features at your fingertips, you can stay in the know while you’re on the go. Download the Ricker’s App from The App Store or Google Play and start saving today!</p>
+            <p>With more saving opportunities and enhanced features at your fingertips, you can stay in the know while you're on the go. Download the Ricker's App from The App Store or Google Play and start saving today!</p>
           </div>
         </div>
         <div class="col s12 m4 l4">
